// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> with all options matches its snapshot 1`] = `
<TextField
  aria-required={true}
  ariaLabel="ARIA_LABEL"
  autoAdjustHeight={false}
  borderless={false}
  className="y-textField y-textInput CLASS y-textField__with-prefix y-textField__with-suffix"
  componentRef={[Function]}
  deferredValidationTime={200}
  description="true"
  disabled={true}
  errorMessage="ERROR MESSAGE"
  label="LABEL"
  maxLength={100}
  multiline={false}
  onBeforeChange={[Function]}
  onBlur={[MockFunction onBlur]}
  onChanged={[Function]}
  onFocus={[MockFunction onFocus]}
  onGetErrorMessage={[Function]}
  onMouseEnter={[MockFunction onMouseEnter]}
  onMouseLeave={[MockFunction onMouseLeave]}
  onNotifyValidationResult={[Function]}
  onRenderDescription={[Function]}
  placeholder="PLACEHOLDER"
  prefix="PREFIX"
  resizable={false}
  suffix="SUFFIX"
  underlined={true}
  validateOnFocusIn={false}
  validateOnFocusOut={false}
  validateOnLoad={true}
  value="VALUE"
/>
`;

exports[`<TextField /> with default options matches its snapshot 1`] = `
<TextField
  autoAdjustHeight={false}
  borderless={false}
  className="y-textField y-textInput"
  componentRef={[Function]}
  deferredValidationTime={200}
  errorMessage=""
  multiline={false}
  onBeforeChange={[Function]}
  onChanged={[Function]}
  onGetErrorMessage={[Function]}
  onNotifyValidationResult={[Function]}
  onRenderDescription={[Function]}
  resizable={false}
  underlined={false}
  validateOnFocusIn={false}
  validateOnFocusOut={false}
  validateOnLoad={true}
/>
`;
